[gd_scene load_steps=2 format=3 uid="uid://lidrbsvtk8wg"]

[ext_resource type="Script" uid="uid://bowrins8d8dv3" path="res://Skripts/main_szene.gd" id="1_c7ixc"]

[node name="MainSzene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c7ixc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="TargetOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="RouteButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
